Fix z-index

--- a/client/src/app/site/pages/organization/pages/committees/pages/committee-detail/modules/committee-detail-view/components/committee-detail-view/committee-detail-view.component.scss
+++ b/client/src/app/site/pages/organization/pages/committees/pages/committee-detail/modules/committee-detail-view/components/committee-detail-view/committee-detail-view.component.scss
@@ -3,7 +3,6 @@
 .committee-details {
     position: relative;
     margin-bottom: 3em !important;
-    z-index: -2;
 
     .committee-description {
         margin-top: 1em;
@@ -86,7 +85,7 @@ $navbar-size: 40px;
 .breadcrumb-position {
     position: fixed;
     top: 78px;
-    z-index: -1;
+    z-index: 101;
     background-color: var(--mat-sidenav-container-background-color);
     width: 100%;
     box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14),
